--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,35 +1,28 @@
 # Database Configuration
 DATABASE_URL=postgresql://postgres:password@localhost:5432/calorai_db
-REDIS_URL=redis://localhost:6379/0
 
-# Security
-SECRET_KEY=your-secret-key-here-change-in-production
+# Security & Authentication
+SECRET_KEY=your_super_secret_key_change_in_production
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# Google OAuth
-GOOGLE_CLIENT_ID=your-google-client-id
-GOOGLE_CLIENT_SECRET=your-google-client-secret
-GOOGLE_REDIRECT_URI=http://localhost:8000/auth/callback
+# Google OAuth (for Login)
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+
+# AI Configuration (Gemini)
+GOOGLE_API_KEY=your_gemini_api_key_here
 
 # API Configuration
-API_V1_PREFIX=/api
-CORS_ORIGINS=["http://localhost:3000","http://localhost:8080"]
+API_V1_STR=/api
+PROJECT_NAME=Find Your Food
 
-# File Storage
-UPLOAD_DIR=./uploads
-MAX_UPLOAD_SIZE=10485760
-ALLOWED_EXTENSIONS=[".jpg",".jpeg",".png",".heic"]
+# File Uploads
+UPLOAD_DIR=uploads/
+MAX_UPLOAD_SIZE=5242880  # 5MB in bytes
 
-# AI Model Configuration
-AI_MODEL_PATH=./models/food_classifier.pth
-CONFIDENCE_THRESHOLD=0.85
-MAX_FOODS_PER_IMAGE=10
+# Redis Configuration (Optional)
+REDIS_URL=redis://localhost:6379
 
 # Rate Limiting
-RATE_LIMIT_PER_MINUTE=10
-RATE_LIMIT_PER_DAY=100
-
-# Environment
-ENVIRONMENT=development
-DEBUG=True
+RATE_LIMIT_PER_MINUTE=60
