--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,6 +23,7 @@ numpy==1.26.3
 torch==2.1.2
 torchvision==0.16.2
 scikit-learn==1.4.0
+google-generativeai==0.3.2
 
 # Data & Validation
 pydantic==2.5.3
