--- a/backend/.env
+++ b/backend/.env
@@ -1,30 +1,26 @@
-# Environment Configuration for Find Your Food Backend
+# Database Configuration (Using SQLite for Local Testing)
+DATABASE_URL=sqlite:///./test.db
 
-# Database Configuration
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/find_your_food_db
-
-# Security
-SECRET_KEY=your-super-secret-key-change-this-in-production-min-32-chars
+# Security & Authentication
+SECRET_KEY=dev-secret-key-change-in-production
 ALGORITHM=HS256
-ACCESS_TOKEN_EXPIRE_MINUTES=43200
+ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# Google OAuth
-GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=your-google-client-secret
+# Google OAuth (for Login)
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
 
-# CORS Settings
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8080,http://127.0.0.1:3000
+# AI Configuration (Gemini)
+# USER: PLEASE REPLACE THIS WITH YOUR ACTUAL KEY
+GOOGLE_API_KEY=
 
-# File Upload Settings
-MAX_FILE_SIZE=10485760
-UPLOAD_DIR=uploads
+# API Configuration
+API_V1_STR=/api
+PROJECT_NAME=Find Your Food
 
-# AI Model Settings (for future production model)
-AI_MODEL_ENDPOINT=http://localhost:8001/predict
-AI_MODEL_CONFIDENCE_THRESHOLD=0.85
+# File Uploads
+UPLOAD_DIR=uploads/
+MAX_UPLOAD_SIZE=5242880
 
 # Rate Limiting
 RATE_LIMIT_PER_MINUTE=60
-
-# Environment
-ENVIRONMENT=development
