--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,29 +1,30 @@
 # Core Framework
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-python-multipart==0.0.6
+fastapi==0.115.0
+uvicorn[standard]==0.32.0
+python-multipart==0.0.12
 
 # Database (SQLite only)
-sqlalchemy==2.0.25
+sqlalchemy==2.0.36
 
 # Authentication
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 
 # Image Processing (lightweight)
-Pillow==10.2.0
+Pillow==11.0.0
 
 # Google AI
-google-generativeai==0.3.2
+google-generativeai==0.8.3
 
 # Data & Validation
-pydantic==2.5.3
-pydantic-settings==2.1.0
-python-dotenv==1.0.0
+pydantic==2.10.3
+pydantic-settings==2.6.1
+python-dotenv==1.0.1
 
 # HTTP Client
-httpx==0.26.0
-requests==2.31.0
+httpx==0.28.1
+requests==2.32.3
 
 # Utilities
-python-dateutil==2.8.2
+python-dateutil==2.9.0.post0
+
