Add premium features: database persistence, meal logging, weekly charts, animations

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   
   # Local Storage
   shared_preferences: ^2.2.2
+  sqflite: ^2.3.0
+  path_provider: ^2.1.1
+  path: ^1.8.3
   
   # Camera
   camera: ^0.10.5+9
